# physica

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  FindGTest.cmake  GTest-release-x86_64-data.cmake  GTestConfig.cmake  README.md  build.sh  build_and_run.py  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
core/: CMakeLists.txt
core/elements/: hyperedge.cpp  hyperedge.h  hypergraph.cpp  hypergraph.h  hypervertex.cpp  hypervertex.h  node.cpp  node.h  rule.cpp  rule.h  vertex.cpp  vertex.h
core/functions/: pattern_match.cpp  pattern_match.h
core/include/: hash.h  hyperedge.h  hypergraph.h  hypervertex.h  identifiable.h  identifiable_base.h  type_defs.h  uuid.h
core/src/: hyperedge.cpp  hypergraph.cpp  hypervertex.cpp  identifiable.cpp  identifiable_base.cpp  uuid.cpp
core/utility/: common_utility.h  identifiable_base.cpp  identifiable_base.h  memory_pool.h  memory_pool.tcc  type_defs.h  uuid.cpp  uuid.h
examples/: CMakeLists.txt  main.cpp
impl/: CMakeLists.txt  computational_physics_engine.cpp  computational_physics_engine.h  graphica.cpp  graphica.h  instance.cpp  instance.h  main.cpp
impl/include/: instance.h
impl/src/: instance.cpp  main.cpp
include/physica/: hypergraph.h  identifiable_base.h  uuid.h
include/physica/internal/: common_utility.h  identifiable_base.h  rule.h  uuid.h
scripts/: build-debug-no-tests.bat  build-debug.bat  build_and_run.py  configure.py
src/: CMakeLists.txt  hyperedge.rs  hypergraph.rs  hypervertex.rs  main.rs  vertex.rs
src/app/: CMakeLists.txt  main.cpp  physica.cpp
test/: CMakeLists.txt  test_hypergraph.cpp
tests/: CMakeLists.txt
tests/elements/: test_hypergraph.cpp
